backend/deploy/k8s-local/application/17-search.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-search
  namespace: digitalhippo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-search
  template:
    metadata:
      labels:
        app: ms-search
    spec:
      containers:
        - name: ms-search
          image: leopoldhsing2/digitalhippo.search:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-search
  namespace: digitalhippo
spec:
  selector:
    app: ms-search
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
