backend/deploy/k8s-local/application/21-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitalhippo-frontend
  namespace: digitalhippo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digitalhippo-frontend
  template:
    metadata:
      labels:
        app: digitalhippo-frontend
    spec:
      containers:
        - name: digitalhippo-frontend
          image: leopoldhsing2/digitalhippo-frontend:local-k8s-deployment
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: digitalhippo-frontend
  namespace: digitalhippo
spec:
  selector:
    app: digitalhippo-frontend
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digitalhippo-frontend-ingress
  namespace: digitalhippo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: digitalhippo-frontend
                port:
                  number: 3000
